# q2t-core

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  parse_fold_dsl.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yml  ci.yml  generate-docs.yml
docs/: README.md  architecture.md  canvas_generator.md  classification.md  dataview_exporter.md  fold_dsl-sample.yaml  fold_dsl-spec.md  glossary.md  q2t-core-overview.md  refutation_eval.py  refutation_eval.yaml  roadmap.md  structure.md  tension.md
docs/dataview_sample/: A-01-01-01.md  A-01-01-02.md  A-01-01.md  A-01-02.md  A-01.md
eval_templates/: default.yaml  flat.yaml
log/: 2025-07-07-fold_dsl-progress.md  2025-07-07-fold_dsl-pydantic.md  2025-07-07-initial-setup.md  README.md
src/: README.md
src/models/: __init__.py  ast.py  eval_axis.py  fold_dsl.py
src/utils/: __init__.py  ast_builder.py  canvas_generator.py  dataview_exporter.py  dsl_parser.py  eval_score.py  eval_utils.py  graphviz_generator.py  tension_analyzer.py  tension_tracker.py
src/validators/: check_structure.py
tests/: README.md  test_ast_builder.py  test_canvas_generator.py  test_check_fold_dsl.py  test_dataview_exporter.py  test_dsl_parser.py  test_dsl_parser_errors.py  test_eval_axis.py  test_eval_score.py  test_eval_utils.py  test_fold_dsl.py  test_graphviz_generator.py  test_parse_fold_dsl.py  test_tension_analyzer.py  test_tension_tracker.py  test_utils_init.py  test_validate_links.py
utils/: __init__.py  dsl_parser.py  eval_score.py
