[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "q2t-core"
version = "0.1.0"
description = "FoldDSL-based structure management"
requires-python = ">=3.10"
authors = [{name="q2t project", email="dev@example.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "ruamel.yaml>=0.18",
    "graphviz>=0.20",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
q2t-parse = "src.utils.dsl_parser:main"
q2t-canvas = "src.utils.canvas_generator:main"
q2t-dataview = "src.utils.dataview_exporter:main"
